# sql-agent-llmops

./: .gitignore  CONTRIBUTING.md  DATASETS.md  Dockerfile  FILE_INDEX.md  FILE_MANIFEST.txt  LICENSE  Makefile  PROJECT_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: README.md  app.py  requirements.txt
configs/: deployment_config.yaml  model_config.yaml  training_config.yaml
notebooks/: 01_data_preparation.py  02_train_sql_generator.py  03_train_chart_reasoner.py  04_train_svg_renderer.py  05_evaluation.py
src/: __init__.py
src/data_processing/: __init__.py  loader.py
src/models/: __init__.py  base.py  chart_reasoner.py  sql_generator.py  svg_renderer.py
src/orchestrator/: __init__.py  pipeline.py
src/rag/: __init__.py  data_profiler.py  engine.py  schema_extractor.py
src/utils/: __init__.py  logger.py  sql_executor.py
src/visualization/: __init__.py  plotly_fallback.py  svg_validator.py
tests/: __init__.py  conftest.py  test_orchestrator.py  test_plotly_fallback.py  test_schema_extractor.py  test_sql_executor.py
training/chart_reasoner/: generate_dataset.py  train.py
training/data_pipelines/: __init__.py  build_chart_mix.py  build_sql_mix.py  build_svg_mix.py  enrich_chart_titles.py
training/jobs/: README.md  train_chart_reasoner_job.py  train_sql_generator_job.py  train_svg_renderer_job.py
training/notebooks/: README.md  train_chart_reasoner.ipynb  train_sql_generator.ipynb  train_svg_renderer.ipynb
training/sql_generator/: prepare_data.py  train.py
training/svg_renderer/: generate_dataset.py  train.py
